Resolves: tdf#93358 resync attribute pattern that may have changed

Change-Id: If3ce8feec940c7212fe467f39db868630522b17e